--- a/app/src/main/res/layout/activity_user_details_individual.xml
+++ b/app/src/main/res/layout/activity_user_details_individual.xml
@@ -4,13 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#EAE8E8"
-    tools:context=".ui.slideshow.UserDetailsActivity">
-    
+    tools:context=".ui.slideshow.UserDetailsIndividual">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
@@ -20,10 +18,10 @@
             app:cardElevation="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.593"
+            app:layout_constraintHorizontal_bias="0.592"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.02">
+            app:layout_constraintVertical_bias="0.066">
 
             <ImageView
                 android:id="@+id/imageView"
@@ -156,10 +154,10 @@
             app:cardElevation="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.617"
+            app:layout_constraintHorizontal_bias="0.558"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintVertical_bias="0.049">
 
             <TextView
                 android:id="@+id/textView"
@@ -195,178 +193,19 @@
                 android:textColor="#4CAF50" />
         </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView4"
-            android:layout_width="379dp"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="20dp"
-            app:layout_constraintTop_toBottomOf="@id/cardView3"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintVertical_bias="0.172">
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="20dp"
-                android:text="Id Proofs "
-                android:textColor="#0C0C0C"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="110dp"
-                android:layout_marginLeft="110dp"
-                android:layout_marginTop="20dp"
-                android:text="*"
-                android:textColor="#FF5722" />
-
-            <TextView
-                android:id="@+id/Shopname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="60dp"
-                android:text="Shop Name "
-                android:textColor="#191818"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/editTextTextPersonName3"
-                android:layout_width="285dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="100dp"
-                android:ems="10"
-                android:inputType="textPersonName" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="170dp"
-                android:text="Shop Photo"
-                android:textColor="#121111"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="200dp"
-                app:srcCompat="@drawable/upload" />
-
-            <ImageView
-                android:id="@+id/imageView8"
-                android:layout_width="match_parent"
-                android:layout_height="66dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="580dp"
-                app:srcCompat="@drawable/upload" />
-
-            <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="match_parent"
-                android:layout_height="66dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="300dp"
-                app:srcCompat="@drawable/upload" />
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="270dp"
-                android:text="License photo "
-                android:textColor="#131313"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="380dp"
-                android:text="GSTIN Number"
-                android:textColor="#232222"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/editTextPhone"
-                android:layout_width="277dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="410dp"
-                android:ems="10"
-                android:inputType="phone" />
-
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="460dp"
-                android:text="Adhaar Card Number"
-                android:textColor="#191919"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/editTextPhone2"
-                android:layout_width="279dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="490dp"
-                android:ems="10"
-                android:inputType="phone" />
-
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="545dp"
-                android:text="Adhaar Photo"
-                android:textColor="#121212"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-        </androidx.cardview.widget.CardView>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/cardView4"
+            app:layout_constraintTop_toBottomOf="@+id/cardView3"
             android:gravity="center_horizontal">
             <Button
-                android:id="@+id/submitD"
+                android:id="@+id/submit"
                 android:layout_width="150dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="30dp"
                 android:layout_height="wrap_content"
                 android:text="Submit"
                 android:background="@drawable/round_button"/>
         </LinearLayout>
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </ScrollView>
