--- a/app/src/main/res/layout/nav_header_home_page.xml
+++ b/app/src/main/res/layout/nav_header_home_page.xml
@@ -13,7 +13,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/profileNavigationImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/nav_header_desc"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/profileNavigationImage"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
